fix: preserve outbox attribute value contracts (#197)