@@ -16,77 +16,80 @@ final class OutboxAttributeValues {
     static Map<String, Value> encode(Map<String, Object> attributes) {
         Map<String, Value> encoded = new LinkedHashMap<>();
         attributes.forEach((key, value) -> encoded.put(key, encodeValue(value)));
-        return Map.copyOf(encoded);
+        return Collections.unmodifiableMap(encoded);
     }
 
     static Map<String, Object> decode(Map<String, Value> attributes) {
         Map<String, Object> decoded = new LinkedHashMap<>();
         attributes.forEach((key, value) -> decoded.put(key, decodeValue(value)));
-        return Map.copyOf(decoded);
+        return Collections.unmodifiableMap(decoded);
     }
 
     private static Value encodeValue(Object value) {
-        if (value == null) {
-            return new Value("null", null, null, null);
-        }
-        if (value instanceof String string) {
-            return scalar("string", string);
-        }
-        if (value instanceof Character character) {
-            return scalar("string", character.toString());
-        }
-        if (value instanceof Boolean bool) {
-            return scalar("boolean", bool.toString());
-        }
-        if (value instanceof Byte number) {
-            return scalar("byte", number.toString());
-        }
-        if (value instanceof Short number) {
-            return scalar("short", number.toString());
-        }
-        if (value instanceof Integer number) {
-            return scalar("integer", number.toString());
-        }
-        if (value instanceof Long number) {
-            return scalar("long", number.toString());
-        }
-        if (value instanceof Float number) {
-            return scalar("float", number.toString());
-        }
-        if (value instanceof Double number) {
-            return scalar("double", number.toString());
-        }
-        if (value instanceof BigInteger number) {
-            return scalar("big-integer", number.toString());
-        }
-        if (value instanceof BigDecimal number) {
-            return scalar("big-decimal", number.toPlainString());
-        }
-        if (value instanceof Instant instant) {
-            return scalar("instant", instant.toString());
-        }
-        if (value instanceof Enum<?> enumValue) {
-            return scalar("enum-name", enumValue.name());
-        }
-        if (value instanceof Map<?, ?> map) {
-            Map<String, Value> object = new LinkedHashMap<>();
-            map.forEach((key, nested) -> {
-                if (!(key instanceof String stringKey)) {
-                    throw unsupported(value);
-                }
-                object.put(stringKey, encodeValue(nested));
-            });
-            return new Value("map", null, Map.copyOf(object), null);
-        }
-        if (value instanceof Collection<?> collection) {
-            return new Value(
-                    "list",
-                    null,
-                    null,
-                    collection.stream()
-                            .map(OutboxAttributeValues::encodeValue)
-                            .toList()
-            );
+        switch (value) {
+            case null -> {
+                return new Value("null", null, null, null);
+            }
+            case String string -> {
+                return scalar("string", string);
+            }
+            case Boolean bool -> {
+                return scalar("boolean", bool.toString());
+            }
+            case Byte number -> {
+                return scalar("byte", number.toString());
+            }
+            case Short number -> {
+                return scalar("short", number.toString());
+            }
+            case Integer number -> {
+                return scalar("integer", number.toString());
+            }
+            case Long number -> {
+                return scalar("long", number.toString());
+            }
+            case Float number -> {
+                return scalar("float", number.toString());
+            }
+            case Double number -> {
+                return scalar("double", number.toString());
+            }
+            case BigInteger number -> {
+                return scalar("big-integer", number.toString());
+            }
+            case BigDecimal number -> {
+                return scalar("big-decimal", number.toPlainString());
+            }
+            case Instant instant -> {
+                return scalar("instant", instant.toString());
+            }
+            case Map<?, ?> map -> {
+                Map<String, Value> object = new LinkedHashMap<>();
+                map.forEach((key, nested) -> {
+                    if (!(key instanceof String stringKey)) {
+                        throw unsupported(value);
+                    }
+                    object.put(stringKey, encodeValue(nested));
+                });
+                return new Value(
+                        "map",
+                        null,
+                        Collections.unmodifiableMap(object),
+                        null
+                );
+            }
+            case Collection<?> collection -> {
+                return new Value(
+                        "list",
+                        null,
+                        null,
+                        collection.stream()
+                                .map(OutboxAttributeValues::encodeValue)
+                                .toList()
+                );
+            }
+            default -> {
+            }
         }
         throw unsupported(value);
     }
@@ -94,7 +97,7 @@ final class OutboxAttributeValues {
     private static Object decodeValue(Value value) {
         return switch (value.type()) {
             case "null" -> null;
-            case "string", "enum-name" -> value.scalar();
+            case "string" -> value.scalar();
             case "boolean" -> Boolean.valueOf(value.scalar());
             case "byte" -> Byte.valueOf(value.scalar());
             case "short" -> Short.valueOf(value.scalar());
